# panda_bin_picking

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_simulation.sh  dependencies.rosinstall  dependencies_simulation.rosinstall  package.xml
config/: gpd_params.cfg
include/: FrankaPanda.h  custom_types.h  franka_panda.h  realsense_l515.h  visualizer.h
install/: gpd_install.sh  opencv_install.sh  pcl_install.sh
launch/: panda_bin_picking.launch
panda_bin_picking/: CMakeLists.txt  package.xml
panda_bin_picking/config/: custom.json  gpd_params.cfg  gpd_params_old.cfg  short_range.json
panda_bin_picking/doc/: manifest.yaml
panda_bin_picking/doc/html/: annotated.html  classFrankaPanda-members.html  classFrankaPanda.html  classRealsenseL515-members.html  classRealsenseL515.html  classVisualizer-members.html  classVisualizer.html  classclient_1_1Action-members.html  classclient_1_1Action.html  classclient_1_1Action__inherit__graph.map  classclient_1_1Action__inherit__graph.md5  classclient_1_1PandaBinPickingClient-members.html  classclient_1_1PandaBinPickingClient.html  classes.html  classstate__machine_1_1State-members.html  classstate__machine_1_1State.html  classstate__machine_1_1State__inherit__graph.map  classstate__machine_1_1State__inherit__graph.md5  client_8py.html  client_8py_source.html  custom__types_8h.html  custom__types_8h__dep__incl.map  custom__types_8h__dep__incl.md5  custom__types_8h__incl.map  custom__types_8h__incl.md5  custom__types_8h_source.html  dir_000003_000002.html  dir_53e6fa9553ac22a5646d2a2b2d7b97a1.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e70ac868b886a3706c67ab9283c255cb.html  files.html  franka__panda_8cpp.html  franka__panda_8cpp__incl.map  franka__panda_8cpp__incl.md5  franka__panda_8cpp_source.html  franka__panda_8h.html  franka__panda_8h__dep__incl.map  franka__panda_8h__dep__incl.md5  franka__panda_8h__incl.map  (+80 more)
panda_bin_picking/include/: custom_types.h  franka_panda.h  realsense_l515.h  visualizer.h
panda_bin_picking/launch/: panda_bin_picking.launch
panda_bin_picking/scripts/: config.rviz  panda_bin_picking_gui.py
panda_bin_picking/scripts/gui/: client.py  settings.py  state_machine.py  window.py
panda_bin_picking/src/: franka_panda.cpp  panda_bin_picking_client.cpp  panda_bin_picking_server.cpp  realsense_l515.cpp  test_node.cpp  visualizer.cpp
panda_realsense/: CMakeLists.txt  package.xml
panda_realsense/launch/: display.rviz  moveit.launch  moveit_rviz.launch  viz_robot.launch
panda_realsense/resources/: panda_arm_hand.srdf.xacro  sensor_manager.launch.xml  sensors_kinect_pointcloud.yaml
panda_realsense/scripts/: eef_to_camera_pose.py  estimate_camera_pose.py
panda_realsense/urdf/: camera_estimated.xacro  panda_realsense.urdf.xacro  table.xacro
panda_realsense_simulation/: CMakeLists.txt  package.xml
panda_realsense_simulation/launch/: display.rviz  gazebo_world.launch  moveit.rviz  moveit_rviz.launch  simulation_moveit.launch  spawn_objects.launch  viz_robot.launch
panda_realsense_simulation/models/Coke/: model.sdf
panda_realsense_simulation/models/Phillips_Stool_Softener_Liquid_Gels_30_liquid_gels/: metadata.pbtxt  model.config  model.sdf
panda_realsense_simulation/models/Twinlab_Premium_Creatine_Fuel_Powder/: model.sdf
panda_realsense_simulation/models/Vans_Cereal_Honey_Nut_Crunch_11_oz_box/: model.sdf
panda_realsense_simulation/resources/: panda.gazebo.xacro  ros_controllers.yaml  sensor_manager.launch.xml  sensors_3d.yaml
panda_realsense_simulation/urdf/: panda_realsense.urdf.xacro  realsense_gazebo.xacro
src/: FrankaPanda.cpp  FrankaPanda.h  RealsenseL515.cpp  RealsenseL515.h  Visualizer.cpp  Visualizer.h  custom_types.h  franka_panda.cpp  panda_bin_picking.cpp  path_planning_node.cpp  pointcloud_fusion_node.cpp  realsense_l515.cpp  visualizer.cpp
