<?xml version="1.0"?>
<package format="2">
  <name>panda_bin_picking</name>
  <version>0.0.0</version>
  <description>The panda_bin_picking package</description>

  <maintainer email="frankauser@todo.todo">frankauser</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>gpd_ros</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>geometric_shapes</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>gpd_ros</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

</package>
