<?xml version="1.0"?>
<package format="2">
  <name>panda_bin_picking</name>
  <version>0.0.1</version>
  <description>The panda_bin_picking package</description>

  <author email="david.leonhardt@stud.h-da.de">David Leonhardt</author>
  <maintainer email="david.leonhardt@stud.h-da.de">David Leonhardt</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend> 
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>franka_gripper</build_depend>
  <build_depend>gpd_ros</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend> 
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>franka_gripper</exec_depend>
  <exec_depend>gpd_ros</exec_depend>

</package>
