<?xml version="1.0"?>
<package format="2">
  <name>panda_realsense</name>
  <version>0.0.0</version>
  <description>The panda_realsense package</description>

  <author email="david.leonhardt@stud.h-da.de">David Leonhardt</author>
  <maintainer email="david.leonhardt@stud.h-da.de">David Leonhardt</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>geometric_shapes</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

</package>
